Refactoring in DOL + consequences
- main target: generic collections, cleanup

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>